feat: add branch management on cache
