# regress/wmts.js
@@ -11,10 +11,10 @@ describe('Wmts', () => {
     done();
   });
 
-  describe('GET /wmts?SERVICE=OTHER&REQUEST=GetCapabilities', () => {
+  describe('GET /0/wmts?SERVICE=OTHER&REQUEST=GetCapabilities', () => {
     it('should return an error', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({ REQUEST: 'GetCapabilities', SERVICE: 'OTHER', VERSION: '1.0.0' })
         .end((err, res) => {
           should.not.exist(err);
@@ -26,10 +26,10 @@ describe('Wmts', () => {
     });
   });
 
-  describe('GET /wmts?SERVICE=WMTS&REQUEST=Other', () => {
+  describe('GET /0/wmts?SERVICE=WMTS&REQUEST=Other', () => {
     it('should return an error', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({ REQUEST: 'Other', SERVICE: 'WMTS', VERSION: '1.0.0' })
         .end((err, res) => {
           should.not.exist(err);
@@ -45,7 +45,7 @@ describe('Wmts', () => {
   describe('GetCapabilities', () => {
     it('should return the Capabilities.xml', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({ REQUEST: 'GetCapabilities', SERVICE: 'WMTS', VERSION: '1.0.0' })
         .end((err, res) => {
           should.not.exist(err);
@@ -61,7 +61,7 @@ describe('Wmts', () => {
   describe('GetTile', () => {
     it('should return an error', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           REQUEST: 'GetTile', SERVICE: 'WMTS', VERSION: '1.0.0', TILEMATRIXSET: 'LAMB93_5cm', TILEMATRIX: 12, TILEROW: 0, TILECOL: 0, FORMAT: 'image/autre', LAYER: 'ortho', STYLE: 'normal',
         })
@@ -76,7 +76,7 @@ describe('Wmts', () => {
 
     it('should return a png image', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           REQUEST: 'GetTile', SERVICE: 'WMTS', VERSION: '1.0.0', TILEMATRIXSET: 'LAMB93_5cm', TILEMATRIX: 12, TILEROW: 0, TILECOL: 0, FORMAT: 'image/png', LAYER: 'ortho', STYLE: 'normal',
         })
@@ -90,7 +90,7 @@ describe('Wmts', () => {
     });
     it('should return a jpeg image', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           REQUEST: 'GetTile', SERVICE: 'WMTS', VERSION: '1.0.0', TILEMATRIXSET: 'LAMB93_5cm', TILEMATRIX: 12, TILEROW: 0, TILECOL: 0, FORMAT: 'image/jpeg', LAYER: 'ortho', STYLE: 'normal',
         })
@@ -105,7 +105,7 @@ describe('Wmts', () => {
 
     it("should return the OPI '19FD5606Ax00020_16371' as png", (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           REQUEST: 'GetTile', SERVICE: 'WMTS', VERSION: '1.0.0', TILEMATRIXSET: 'LAMB93_5cm', TILEMATRIX: 12, TILEROW: 0, TILECOL: 0, FORMAT: 'image/png', LAYER: 'opi', Name: '19FD5606Ax00020_16371', STYLE: 'normal',
         })
@@ -124,7 +124,7 @@ describe('Wmts', () => {
     describe('query: LAYER=other', () => {
       it('should return an error', (done) => {
         chai.request(server)
-          .get('/wmts')
+          .get('/0/wmts')
           .query({
             SERVICE: 'WMTS',
             REQUEST: 'GetFeatureInfo',
@@ -151,7 +151,7 @@ describe('Wmts', () => {
     describe('query: STYLE=other', () => {
       it('should return an error', (done) => {
         chai.request(server)
-          .get('/wmts')
+          .get('/0/wmts')
           .query({
             SERVICE: 'WMTS',
             REQUEST: 'GetFeatureInfo',
@@ -178,7 +178,7 @@ describe('Wmts', () => {
     describe('query: TILEMATRIXSET=OTHER', () => {
       it('should return an error', (done) => {
         chai.request(server)
-          .get('/wmts')
+          .get('/0/wmts')
           .query({
             SERVICE: 'WMTS',
             REQUEST: 'GetFeatureInfo',
@@ -204,7 +204,7 @@ describe('Wmts', () => {
     });
     it('should return an xml', (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           SERVICE: 'WMTS',
           REQUEST: 'GetFeatureInfo',
@@ -229,7 +229,7 @@ describe('Wmts', () => {
     });
     it("should return a warning: 'missing'", (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           SERVICE: 'WMTS',
           REQUEST: 'GetFeatureInfo',
@@ -253,7 +253,7 @@ describe('Wmts', () => {
     });
     it("should return an error: 'out of bounds'", (done) => {
       chai.request(server)
-        .get('/wmts')
+        .get('/0/wmts')
         .query({
           SERVICE: 'WMTS',
           REQUEST: 'GetFeatureInfo',
